--- a/css/styles.css
+++ b/css/styles.css
@@ -7,17 +7,31 @@ html {
 }
 
 body {
-  background-color: rgb(132, 132, 132);
+  background-color: rgb(223, 222, 222);
   font-family: 'Raleway', sans-serif;
+  padding-top: 1rem;
 }
 
-.card-img {
-  /* width: 300px;
-  height: auto; */
+/* Intro section */
+
+.jumbotron {
+  
+  background-color: rgb(255, 255, 255);
 }
 
+#intro h1 {
+  font-size: 4rem;
+  
+}
+
+#intro h2 {
+  font-size: 5rem;
+  
+}
+
+
 .card-img {
-  height: 14vw;
+  height: 16vw;
   border: 2px dashed purple;
   padding: 2px;
 }
@@ -48,35 +62,61 @@ a:hover{
 /* Flickering animation */
 
 .intro {
-  animation: flicker 1.5s infinite alternate;
-  color: yellowgreen;
+  display: block;
+  color: rgb(192, 191, 191);
+  -webkit-animation-name: flash;
+  animation-name: flash;
+  -webkit-animation-duration: 5.5s;
+  animation-duration: 5.5s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  animation-delay: 2s;
+  animation-direction: alternate-reverse;
+  font-size: 20rem;
+}
 
   /* Flickering animation */
 
-  h2 {
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: 400;
-  }
-
-@keyframes flicker {
+@-webkit-keyframes flash {
     
-  0%, 18%, 22%, 25%, 53%, 57%, 100% {
-
-      text-shadow:
-      0 0 4px rgb(4, 107, 252),
-      0 0 11px rgb(4, 107, 252),
-      0 0 19px rgb(4, 107, 252),
-      0 0 40px rgb(4, 107, 252),
-      0 0 80px rgb(4, 107, 252),
-      0 0 90px rgb(4, 107, 252),
-      0 0 100px rgb(4, 107, 252),
-      0 0 150px rgb(4, 107, 252);
-  
-  }
-  
-  20%, 24%, 55% {        
-      text-shadow: none;
-  }    
+  0% {
+    text-shadow: 2px 2px 8px rgb(4, 252, 83);
+    color: white;
 }
-
+  18% {
+    text-shadow: 2px 2px 8px rgb(4, 107, 252);
+    color: white;
+  }
+  20% {
+    text-shadow: none;
+    color: white;
+  }
+  22% {
+    text-shadow: 2px 2px 8px rgb(252, 4, 231);
+    color: white;
+  }
+  24% {
+    text-shadow: none;
+    color: white;
+  }
+  25% {
+    text-shadow: 2px 2px 8px rgb(4, 252, 83);
+    color: white;
+  }
+  53% {
+    text-shadow: 2px 2px 8px rgb(4, 107, 252);
+    color: white;
+  }
+  55% {
+    text-shadow: none;
+    color: white;
+  }
+  57% {
+    text-shadow: 2px 2px 8px rgb(252, 4, 231);
+    color: white;
+  }
+  100% {
+    text-shadow: 2px 2px 8px rgb(4, 107, 252);
+    color: white;
+  }
+} 
