--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,33 @@ a:hover{
   -webkit-text-fill-color: red;
 }
 
+/* Navigation */
+#icons img {
+  width: 2em;
+  padding: 3px;
+  border-radius: 0;
+  margin: 5px;
+  
+}
+
+#icons li {
+  list-style: none;
+}
+
+#icons {
+  position: fixed;
+  top: 1vw;
+  right: 1vw;
+  
+}
+
+@media only screen and (max-width: 600px) {
+
+  #icons img {
+    display: none;
+  }
+}
+
 /* Intro section */
 
 .jumbotron {
@@ -100,7 +127,7 @@ a:hover{
     padding: 2px;
   }
 
-.card {
+.card-s {
   display: flex;
   min-height: 555px;
   position: relative;
@@ -129,6 +156,10 @@ a:hover{
   -webkit-animation-iteration-count: 1;
   animation-iteration-count: 1;
   animation-direction: alternate-reverse;
+}
+
+.ci1 {
+  background: url(img/vacation.png");
 }
 
 
