--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,14 @@
 
 html {
   padding-top: 1vw;
+  padding-bottom: 1vw;
   background: rgb(16,175,161);
   background: radial-gradient(circle, rgba(16,175,161,1) 0%, rgba(23,9,121,1) 55%, rgba(255,0,80,1) 100%);
 
 }
 
 body {
+  max-width: 1100px !important;
   background-color: rgb(223, 222, 222);
   font-family: 'Raleway', sans-serif;
   padding-top: 1rem;
@@ -124,22 +126,23 @@ a:hover{
 @media only screen and (min-width: 780px) {
 
   .card-img {
-    height: 18vw;
+    height: 22vw;
+    max-height: 300px;
     border: 2px dashed purple;
     padding: 2px;
   }
 
-.card-s {
-  display: flex;
-  min-height: 55vw;
-  position: relative;
-}
+  .card-s {
+    display: flex;
+    min-height: 55vw;
+    position: relative;
+  }
 
-.card-footer {
-  position: absolute;
-  bottom: 0px;
-  width: 88%;
-}
+  .card-footer {
+    position: absolute;
+    bottom: 0px;
+    width: 88%;
+  }
 }
 .card-text {
   padding-top: 10px;
@@ -149,7 +152,12 @@ ol {
   padding-bottom: 40px;
 }
 
-
+@media only screen and (min-width: 900px) {
+  .card {
+    min-height: 10vw;
+    height: 750px !important;
+  }
+}
 
 /* Flickering animation */
 
@@ -171,7 +179,6 @@ ol {
   /* animation */
 
   @-webkit-keyframes flash {
-    
     0% {
       text-shadow: 2px 2px 18px rgb(4, 252, 83);
       color: white;
@@ -218,7 +225,5 @@ ol {
   /* Animate */
 
   :root {
-    --animate-duration: 3s;
-    --animate-delay: 0.9s;
-
+    --animate-duration: 2s;
   }
