fix p tags, readme and float issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,13 @@ ol {
   }
 }
 
+/* About me */
+.float {
+  display: block;
+  float: right;
+  width: 40px;
+}
+
 /* Flickering animation */
 
 .intro {
