fix the transparent background for the mephoto

--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ a:hover{
 
 .jumbotron {
   background-color: rgb(255, 255, 255);
-  display: flex;
+  display: flex !important;
   padding-right: 0;
 }
 
