--- a/css/styles.css
+++ b/css/styles.css
@@ -135,8 +135,8 @@ a:hover{
 @media only screen and (min-width: 768px) {
 
   .card-img {
-    height: 22vw;
-    max-height: 300px;
+    /* height: 22vw;
+    max-height: 300px; */
     border: 2px dashed purple;
     padding: 2px;
   }
